<resources>
    <string name="app_name">Tips Calculator</string>
    <string name="title">Summary</string>
    <string name="subtitle">Take a look below the total with tips!</string>
    <string name="total_bill">Check:</string>
    <string name="total_people">Total of people:</string>
    <string name="percentage">Percentage:</string>
    <string name="total_tips">TOTAL:</string>
    <string name="btn_recalculate">calculate again</string>
    <string name="subtitle_home">Fulfill all the fields below to calculate the tips</string>
    <string name="total_value_check">Fill with the total check</string>
    <string name="total_value_people">Fill with the number of people</string>
    <string name="btn_clean">clean</string>
    <string name="btn_done">calculate</string>

    <string-array name="num_people">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>+ de 10 </item>
    </string-array>
</resources>